--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
       <artifactId>batik-swing</artifactId>
       <version>1.7</version>
     </dependency>
+    
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
