--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,21 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>org.pushingpixels.flamingo.api.svg.SVGApplication</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
