--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
       <artifactId>batik-swing</artifactId>
       <version>1.7</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.swinglabs</groupId>
+      <artifactId>swingx</artifactId>
+      <version>1.6.1</version>
+    </dependency>
     
     <dependency>
       <groupId>junit</groupId>
