--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
       <version>1.8.2</version>
       <scope>provided</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.0-rc1</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
