--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -46,6 +46,53 @@
           <mainClass>org.pushingpixels.flamingo.api.svg.SVGApplication</mainClass>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>keytool-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>clean</goal>
+              <goal>genkey</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+        <configuration>
+          <keystore>target/maven.keystore</keystore>
+          <dname>cn=SVG Transcoder</dname>
+          <keypass>secret</keypass>
+          <storepass>secret</storepass>
+          <alias>maven</alias>
+          <validity>3650</validity>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo.webstart</groupId>
+        <artifactId>webstart-maven-plugin</artifactId>
+        <version>1.0-beta-2</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jnlp-inline</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <jnlp>
+            <mainClass>org.pushingpixels.flamingo.api.svg.SVGApplication</mainClass>
+          </jnlp>
+          <sign>
+            <keystore>${basedir}/target/maven.keystore</keystore>
+            <keypass>secret</keypass>
+            <storepass>secret</storepass>
+            <storetype>jks</storetype>
+            <alias>maven</alias>
+            <verify>true</verify>
+          </sign>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
