--- a/core/pom.xml
+++ b/core/pom.xml
@@ -36,6 +36,13 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>com.github.insubstantial</groupId>
+      <artifactId>flamingo</artifactId>
+      <version>7.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
