--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -27,6 +27,13 @@
       <artifactId>swingx</artifactId>
       <version>1.6.1</version>
     </dependency>
+    
+    <dependency>
+      <groupId>com.miglayout</groupId>
+      <artifactId>miglayout</artifactId>
+      <version>3.7.4</version>
+      <classifier>swing</classifier>
+    </dependency>
   </dependencies>
 
   <build>
