Switching to version 1.0

--- a/ant/pom.xml
+++ b/ant/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.pushingpixels</groupId>
     <artifactId>flamingo-svg-transcoder</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <artifactId>flamingo-svg-transcoder-ant</artifactId>
   <name>Transcoder Ant Task</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <description>Transform SVG images into Java2D icons for your Swing applications</description>
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>org.pushingpixels</groupId>
       <artifactId>flamingo-svg-transcoder-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     
     <dependency>
