--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.pushingpixels</groupId>
     <artifactId>flamingo-svg-transcoder</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <groupId>org.pushingpixels</groupId>
   <artifactId>flamingo-svg-transcoder-core</artifactId>
   <name>Transcoder Core</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <description>Transform SVG images into Java2D icons for your Swing applications</description>
