Aligned the versions of the components on the parent POM

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,7 +10,7 @@
   <groupId>org.pushingpixels</groupId>
   <artifactId>flamingo-svg-transcoder-core</artifactId>
   <name>Transcoder Core</name>
-  <version>1.0</version>
+  <version>${parent.version}</version>
   <packaging>jar</packaging>
 
   <description>Transform SVG images into Java2D icons for your Swing applications</description>
