--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -95,6 +95,7 @@
         <configuration>
           <jnlp>
             <mainClass>org.pushingpixels.flamingo.api.svg.SVGApplication</mainClass>
+            <j2seVersion>1.6+</j2seVersion>
           </jnlp>
           <sign>
             <keystore>${basedir}/src/main/config/maven.keystore</keystore>
