--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -82,6 +82,11 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>org.pushingpixels.flamingo.api.svg.SVGApplication</mainClass>
+                  <manifestEntries>
+                    <Application-Name>Flamingo SVG Transcoder</Application-Name>
+                    <Permissions>all-permissions</Permissions>
+                    <Codebase>*</Codebase>
+                  </manifestEntries>
                 </transformer>
               </transformers>
               <shadedArtifactAttached>true</shadedArtifactAttached>
