--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -65,7 +65,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>org.pushingpixels.flamingo.api.svg.SVGApplication</mainClass>
+          <mainClass>org.pushingpixels.flamingo.api.svg.gui.SVGApplication</mainClass>
         </configuration>
       </plugin>
       <plugin>
@@ -81,7 +81,7 @@
             <configuration>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>org.pushingpixels.flamingo.api.svg.SVGApplication</mainClass>
+                  <mainClass>org.pushingpixels.flamingo.api.svg.gui.SVGApplication</mainClass>
                   <manifestEntries>
                     <Application-Name>Flamingo SVG Transcoder</Application-Name>
                     <Permissions>all-permissions</Permissions>
@@ -122,7 +122,7 @@
         </executions>
         <configuration>
           <jnlp>
-            <mainClass>org.pushingpixels.flamingo.api.svg.SVGApplication</mainClass>
+            <mainClass>org.pushingpixels.flamingo.api.svg.gui.SVGApplication</mainClass>
             <j2seVersion>1.7+</j2seVersion>
           </jnlp>
           <sign>
