--- a/core/src/main/resources/org/pushingpixels/flamingo/api/svg/resizable.template
+++ b/core/src/main/resources/org/pushingpixels/flamingo/api/svg/resizable.template
@@ -23,7 +23,7 @@ public class ${CLASSNAME} implements org.pushingpixels.flamingo.api.common.icon.
         Shape shape = null;
         
         float origAlpha = 1.0f;
-        Composite origComposite = ((Graphics2D)g).getComposite();
+        Composite origComposite = g.getComposite();
         if (origComposite instanceof AlphaComposite) {
             AlphaComposite origAlphaComposite = (AlphaComposite)origComposite;
             if (origAlphaComposite.getRule() == AlphaComposite.SRC_OVER) {
