--- a/ant/pom.xml
+++ b/ant/pom.xml
@@ -9,7 +9,6 @@
   </parent>
   <artifactId>flamingo-svg-transcoder-ant</artifactId>
   <name>Transcoder Ant Task</name>
-  <version>${parent.version}</version>
   <packaging>jar</packaging>
 
   <description>Transform SVG images into Java2D icons for your Swing applications</description>
@@ -34,6 +33,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
+        <version>3.0.0</version>
         <executions>
           <execution>
             <phase>initialize</phase>
@@ -45,6 +45,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4.3</version>
         <executions>
           <execution>
             <phase>package</phase>
