Added the Codebase, Permissions and Application-Name attributes to the manifest of the GUI jar

--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -53,6 +53,18 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Codebase>*</Codebase>
+              <Permissions>all-permissions</Permissions>
+              <Application-Name>Flamingo SVG Transcoder</Application-Name>
+            </manifestEntries>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.2.1</version>
