Fixed gradients to have a fallback and fixed shape drawing/stroke

--- a/core/src/main/resources/org/pushingpixels/flamingo/api/svg/plain.template
+++ b/core/src/main/resources/org/pushingpixels/flamingo/api/svg/plain.template
@@ -81,6 +81,7 @@ public class ${CLASSNAME} extends com.codename1.ui.Image implements Painter {
 
     private static void paint(Graphics g) {
         int origAlpha = g.getAlpha();
+        Stroke baseStroke;
         Shape shape;
         g.setAntiAliased(true);
         g.setAntiAliasedText(true);
